# AuS

./: CMakeLists.txt  Main.qml  README.md  imageprocessor.cpp  imageprocessor.h  main.cpp  resources.qrc  round_corners.frag  spotifyapi.cpp  spotifyapi.h
